GearsetPOC/force-app/main/default/objects/Text_Bodies__c/Text_Bodies__c.object-meta.xml
<CustomObject>
    <description>Functionality to hold multi-language versions of the same template</description>
    <label>Text Body</label>
    <nameField>
        <label>Text Body Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Text Bodies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>