GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Body_DE__c.field-meta.xml
<CustomField>
    <fullName>Body_DE__c</fullName>
    <label>Body DE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>