GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Body_EN__c.field-meta.xml
<CustomField>
    <fullName>Body_EN__c</fullName>
    <label>Body EN</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>