GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Body_FR__c.field-meta.xml
<CustomField>
    <fullName>Body_FR__c</fullName>
    <label>Body FR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>