GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Body_FR_BOT__c.field-meta.xml
<CustomField>
    <fullName>Body_FR_BOT__c</fullName>
    <label>Body FR BOT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>