GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Body_NL__c.field-meta.xml
<CustomField>
    <fullName>Body_NL__c</fullName>
    <label>Body NL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>