GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/CFM__c.field-meta.xml
<CustomField>
    <fullName>CFM__c</fullName>
    <label>CFM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No CFM</fullName>
            </value>
            <value>
                <fullName>CFM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>