GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Delay_duration__c.field-meta.xml
<CustomField>
    <fullName>Delay_duration__c</fullName>
    <label>Delay duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ignore</fullName>
            </value>
            <value>
                <fullName>0-29</fullName>
            </value>
            <value>
                <fullName>30-59</fullName>
            </value>
            <value>
                <fullName>60-119</fullName>
            </value>
            <value>
                <fullName>120-179</fullName>
            </value>
            <value>
                <fullName>180+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>