GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Lesser_than_4_euros__c.field-meta.xml
<CustomField>
    <fullName>Lesser_than_4_euros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>&lt;4€</label>
    <type>Checkbox</type>
</CustomField>