GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Message_for_TTC__c.field-meta.xml
<CustomField>
    <fullName>Message_for_TTC__c</fullName>
    <label>Message for TTC</label>
    <type>TextArea</type>
</CustomField>