GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Message_for_TTC_NL__c.field-meta.xml
<CustomField>
    <fullName>Message_for_TTC_NL__c</fullName>
    <label>Message for TTC NL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>