GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Needs_to_be_forced__c.field-meta.xml
<CustomField>
    <fullName>Needs_to_be_forced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs to be forced</label>
    <type>Checkbox</type>
</CustomField>