GearsetPOC/force-app/main/default/objects/Text_Bodies__c/fields/Type_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Type_Compensation__c</fullName>
    <label>Compensation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>e-Voucher</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
                <isActive>false</isActive>
                <label>Voucher</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>