GearsetPOC/force-app/main/default/objects/Text_Bodies__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Body_FR__c</columns>
    <columns>Body_NL__c</columns>
    <columns>Body_EN__c</columns>
    <columns>Body_DE__c</columns>
    <columns>Einstein_Master_Label__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>